--- a/project.config.json
+++ b/project.config.json
@@ -10,6 +10,10 @@
         "type": "folder"
       },
       {
+        "value": "RuoYi-Vue-master",
+        "type": "folder"
+      },
+      {
         "value": "README.md",
         "type": "file"
       }
